--- a/index.html
+++ b/index.html
@@ -1,7 +1,67 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
-</html>
+---
+layout: default.html
+title: A-Way-How Business Process Central
+---
+<div class="jumbotron jumbotron-fluid">
+    <div class="container">
+        <h1>Bootstrap Tutorial</h1>
+        <p><i class="fas fa-cloud"></i> Bootstrap is the most popular HTML, CSS...</p>
+    </div>
+</div>        
+<div class="container border rounded" id="section1">
+    <h1>My First Bootstrap Page</h1>
+    <p>
+        This is some text.
+    </p>
+    <button data-toggle="collapse" data-target="#demo">Collapsible</button>
+    <div id="demo" class="collapse">
+        Lorem ipsum dolor text....
+    </div>
+</div>
+<br></br>
+<div class="card-columns">
+    <div class="container"id="section2">
+        <div class="card bg-light text-dark w-100">
+            <div class="card-header">
+                <h4 class="card-title">Card title 1</h4>
+            </div>
+            <img class="card-img-top" src="ExtEvents.png" style="width:100%" alt="Card image">
+            <div class="card-body">
+                <p>
+                    The <abbr title="AKA the marium">TM</abbr> was founded in 1948.
+                    <button type="button" class="btn btn-danger">
+                        Messages <span class="badge badge-light">4</span>
+                    </button>
+                </p>
+            </div>
+            <div class="card-footer">
+                <div class="row">
+                    <div class="col"><a href="#" class="btn btn-info stretched-link">See Profile</a></div>
+                    <div class="col"><a href="#" class="btn btn-primary stretched-link">Another Profile</a></div>
+                </div>
+            </div>            
+        </div>
+    </div>
+    <div class="container"id="section3">
+        <div class="card bg-light text-dark w-100">
+            <div class="card-header">
+                <h4 class="card-title">Card title 2</h4>
+            </div>
+            <img class="card-img-top" src="ExtEvents.png" style="width:100%" alt="Card image">
+            <div class="card-body">
+                <p>
+                    The <abbr title="AKA the marium">TM</abbr> was founded in 1948.
+                    <button type="button" class="btn btn-danger">
+                        Messages <span class="badge badge-light">4</span>
+                    </button>
+                </p>
+            </div>
+            <div class="card-footer">
+                <div class="row">
+                    <div class="col"><a href="#" class="btn btn-info stretched-link">See Profile</a></div>
+                    <div class="col"><a href="#" class="btn btn-primary stretched-link">Another Profile</a></div>
+                </div>
+            </div>            
+        </div>
+    </div>
+</div>
