--- a/index.html
+++ b/index.html
@@ -1,13 +1,7 @@
 ---
 layout: default
-title: Summar
+title: A>Way>How>
 ---
-<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">      
-    <div class="p-4 p-md-5 mb-4 text-white rounded bg-dark">
-        <div class="col-md-6 px-0">
-          <h1 class="display-4 font-italic">Taxor Cloud le ayuda con sus impuestos</h1>
-          <p class="lead my-3">Conecta con su ERP, sincroniza la información y la prepara para que usted tan sólo deba revisarla y presentarla.</p>
-          <!-- <p class="lead mb-0"><a href="#" class="text-white fw-bold">Empecemos...</a></p> -->
-        </div>
-    </div>
+<div class="container">      
+    <h1>Hola</h1>
 </div>
