--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 layout: default
 title: A>Way>How>
 ---
-<div class="container border rounded awhColor">      
+<div class="container border rounded">      
     <h1>Hola</h1>
 </div>
