--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 layout: default
 title: A>Way>How>
 ---
-
 <div class="container" style="margin-top:30px">
     <div class="row">
         <div class="col-sm-4">
@@ -29,6 +28,11 @@ title: A>Way>How>
             <hr class="d-sm-none">
         </div>
         <div class="col-sm-8">
+            <div class="bd-callout bd-callout-info">
+                <h4 id="dealing-with-specificity">Dealing with specificity</h4>
+                <p>Sometimes contextual classes cannot be applied due to the specificity of another selector. In some cases, a sufficient workaround is to wrap your element’s content in a <code class="language-plaintext highlighter-rouge">&lt;div&gt;</code> with the class.</p>
+            </div>
+            <br>
             <h2>TITLE HEADING</h2>
             <h5>Title description, Dec 7, 2017</h5>
             <div class="fakeimg">Fake Image</div>
