--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@ title: A>Way>How>
 	<div class="container">
     	<div class="row">
 				<div class="col-sm-6 border-left mb-3 awhContainer">
-					<img src="/timeline.png" alte="TimeLine" />
-                	<h6>Timeline</h6>
+					<img src="/_images/timeline.png" alt="TimeLine" />
+                	<h4>Timeline</h4>
                     <p class="card-text">One way how to inform about the timeline.</p>
                 </div>
 				<div class="col-sm-6 border-left mb-3 awhContainer">
-                	<h6>Card 2</h6>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+					<img src="/_images/reengineering.png" alt="Reengineering" />
+                	<h4>Reengineering</h4>
+                    <p class="card-text">One way how to measure and redesign your business process.</p>
                 </div>
 				<div class="col-sm-6 border-left mb-3 awhContainer">
                 	<h6>Card 3</h6>
