--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@ title: A>Way>How>
 	<div class="container">
     	<div class="row">
 				<div class="col-sm-6 border-left mb-3 awhContainer">
-					<img src="/_images/timeline.png" alt="TimeLine" />
+					<img src="/images/timeline.png" alt="TimeLine" />
                 	<h4>Timeline</h4>
                     <p class="card-text">One way how to inform about the timeline.</p>
                 </div>
 				<div class="col-sm-6 border-left mb-3 awhContainer">
-					<img src="/_images/reengineering.png" alt="Reengineering" />
+					<img src="/images/reengineering.png" alt="Reengineering" />
                 	<h4>Reengineering</h4>
                     <p class="card-text">One way how to measure and redesign your business process.</p>
                 </div>
