--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@ title: A>Way>How>
 <main>
 	<div class="container">
     	<div class="row">
-				<div class="col-sm-6 border-left mb-3 ml-3 awhContainer">
-					<img src="/images/timeline.png" alt="TimeLine" />
+				<div class="col-sm-6 border-left mb-3 awhContainer">
+					<img src="/images/timeline.png" alt="TimeLine" style="height: 150px;" />
                 	<h4>Timeline</h4>
                     <p class="card-text">One way how to inform about the timeline.</p>
                 </div>
-				<div class="col-sm-6 border-left mb-3 ml-3 awhContainer">
-					<img src="/images/reengineering.png" alt="Reengineering" style="height: 100px;" />
+				<div class="col-sm-6 border-left mb-3 awhContainer">
+					<img src="/images/reengineering.png" alt="Reengineering" style="height: 150px;" />
                 	<h4>Reengineering</h4>
                     <p class="card-text">One way how to measure and redesign your business process.</p>
                 </div>
-				<div class="col-sm-6 border-left mb-3 ml-3 awhContainer">
+				<div class="col-sm-6 border-left mb-3 awhContainer">
                 	<h6>Card 3</h6>
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 </div>
-				<div class="col-sm-6 border-left mb-3 ml-3 awhContainer">
+				<div class="col-sm-6 border-left mb-3 awhContainer">
                 	<h6>Card 4</h6>
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 </div>
