--- a/index.html
+++ b/index.html
@@ -6,22 +6,24 @@ title: A>Way>How>
 	<div class="container">
     	<div class="row">
 				<div class="col-sm-6 border-left mb-3 awhContainer">
-					<img src="/images/timeline.png" alt="TimeLine" style="height: 150px;" />
+					<img src="/images/timeline.png" alt="TimeLine" style="height: 150px; width: 330px;" />
                 	<h4>Timeline</h4>
-                    <p class="card-text">One way how to inform about the timeline.</p>
+                    <p class="card-text">A way how to inform about the timeline.</p>
                 </div>
 				<div class="col-sm-6 border-left mb-3 awhContainer">
-					<img src="/images/reengineering.png" alt="Reengineering" style="height: 150px;" />
+					<img src="/images/reengineering.png" alt="Reengineering" style="height: 150px; width: 330px;" />
                 	<h4>Reengineering</h4>
-                    <p class="card-text">One way how to measure and redesign your business process.</p>
+                    <p class="card-text">A way how to redesign your business process.</p>
                 </div>
 				<div class="col-sm-6 border-left mb-3 awhContainer">
-                	<h6>Card 3</h6>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+					<img src="/images/measure.png" alt="Measure" style="height: 150px; width: 330px;" />
+                	<h4>Measure</h4>
+                    <p class="card-text">A way how to measure and take decisions.</p>
                 </div>
 				<div class="col-sm-6 border-left mb-3 awhContainer">
-                	<h6>Card 4</h6>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+					<img src="/images/instructions.png" alt="Instructions" style="height: 150px; width: 330px;" />
+                	<h4>Instructions</h4>
+                    <p class="card-text">A way how to train your employees.</p>
                 </div>
 			</div>
 	</div>           
