--- a/index.html
+++ b/index.html
@@ -6,22 +6,22 @@ title: A>Way>How>
 	<div class="container">
     	<div class="row">
 				<div class="col-sm-6 border-left mb-3 awhContainer">
-					<img src="/images/timeline.png" alt="TimeLine" style="height: 150px; width: 330px;" />
+					<img src="/images/timeline.png" alt="TimeLine" />
                 	<h4>Timeline</h4>
                     <p class="card-text">A way how to inform about the timeline.</p>
                 </div>
 				<div class="col-sm-6 border-left mb-3 awhContainer">
-					<img src="/images/reengineering.png" alt="Reengineering" style="height: 150px; width: 330px;" />
+					<img src="/images/reengineering.png" alt="Reengineering" />
                 	<h4>Reengineering</h4>
                     <p class="card-text">A way how to redesign your business process.</p>
                 </div>
 				<div class="col-sm-6 border-left mb-3 awhContainer">
-					<img src="/images/measure.png" alt="Measure" style="height: 150px; width: 330px;" />
+					<img src="/images/measure.png" alt="Measure" />
                 	<h4>Measure</h4>
                     <p class="card-text">A way how to measure and take decisions.</p>
                 </div>
 				<div class="col-sm-6 border-left mb-3 awhContainer">
-					<img src="/images/instructions.png" alt="Instructions" style="height: 150px; width: 330px;" />
+					<img src="/images/instructions.png" alt="Instructions" />
                 	<h4>Instructions</h4>
                     <p class="card-text">A way how to train your employees.</p>
                 </div>
