--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@ layout: default
 title: A>Way>How>
 ---
 <main>
+	<div class="container-fluid border rounded">
+		<h6>A>Way>How> is a tool for Business Central that allows you to design, document and monitor your business process.</h6>
+	</div>
 	<div class="container">
     	<div class="row">
 				<div class="col-sm-6 border-left mb-3 awhContainer">
