--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@ layout: default
 title: A>Way>How>
 ---
 <main>
-	<div class="container">
-		<h6>A>Way>How> is a tool for Business Central that allows you to design, document and monitor your business process.</h6>
+	<div class="container text-center">
+		<h6>A>Way>How> is a tool for Business Central that allows you to design, document and monitor your business processes.</h6>
 	</div>
 	<br>
 	<div class="container">
