--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@ title: A>Way>How>
     	<div class="row">
 				<div class="col-sm-6 border-left mb-3 awhContainer">
 					<img src="/images/timeline.png" alt="TimeLine" />
-                	<h4>Timeline</h4>
-                    <p class="card-text">A way how to inform about the timeline.</p>
+                	<h4>Inform externals</h4>
+                    <p class="card-text">A way how to inform to externals with a timeline.</p>
                 </div>
 				<div class="col-sm-6 border-left mb-3 awhContainer">
 					<img src="/images/reengineering.png" alt="Reengineering" />
-                	<h4>Reengineering</h4>
+                	<h4>Re-thing your business processes</h4>
                     <p class="card-text">A way how to redesign your business process.</p>
                 </div>
 				<div class="col-sm-6 border-left mb-3 awhContainer">
 					<img src="/images/measure.png" alt="Measure" />
-                	<h4>Measure</h4>
-                    <p class="card-text">A way how to measure and take decisions.</p>
+                	<h4>Take accurate decisions</h4>
+                    <p class="card-text">A way how to measure and take the correct decisions.</p>
                 </div>
 				<div class="col-sm-6 border-left mb-3 awhContainer">
 					<img src="/images/instructions.png" alt="Instructions" />
-                	<h4>Instructions</h4>
-                    <p class="card-text">A way how to train your employees.</p>
+                	<h4>Train your employees</h4>
+                    <p class="card-text">A way how to give the right instructions to employees.</p>
                 </div>
 			</div>
 	</div>           
