--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@ title: A>Way>How>
 	<br>
 	<div class="container">
     	<div class="row">
-				<div class="col-sm-6 border-left mb-3 awhContainer">
+				<div class="col-sm-6 border-left mb-3 awhContainer myContainer" data-commentid="1">
 					<img src="/images/timeline.png" alt="TimeLine" />
                 	<h4>Inform externals</h4>
                     <p class="card-text">A way how to inform to externals with a timeline.</p>
                 </div>
-				<div class="col-sm-6 border-left mb-3 awhContainer">
+				<div class="col-sm-6 border-left mb-3 awhContainer myContainer" data-commentid="2">
 					<img src="/images/reengineering.png" alt="Reengineering" />
                 	<h4>Re-thing your business processes</h4>
                     <p class="card-text">A way how to redesign your business process.</p>
                 </div>
-				<div class="col-sm-6 border-left mb-3 awhContainer">
+				<div class="col-sm-6 border-left mb-3 awhContainer myContainer" data-commentid="3">
 					<img src="/images/measure.png" alt="Measure" />
                 	<h4>Take accurate decisions</h4>
                     <p class="card-text">A way how to measure and take the correct decisions.</p>
                 </div>
-				<div class="col-sm-6 border-left mb-3 awhContainer">
+				<div class="col-sm-6 border-left mb-3 awhContainer myContainer" data-commentid="4">
 					<img src="/images/instructions.png" alt="Instructions" />
                 	<h4>Train your employees</h4>
                     <p class="card-text">A way how to give the right instructions to employees.</p>
