--- a/templates.html
+++ b/templates.html
@@ -9,26 +9,41 @@ title: A>Way>How>
 	<br>
 	<div class="container">
     	<div class="row">
-				<div class="col-sm-6 border-left mb-3 awhContainer">
-					<img src="/images/flow.png" alt="Flow" />
-                	<h4>Send an email when shipment</h4>
-                    <p class="card-text">An email is sent to customer when a shipment is done.</p>
-                </div>
-				<div class="col-sm-6 border-left mb-3 awhContainer">
-					<img src="/images/flow.png" alt="Flow" />
-                	<h4>Send an email when shipment</h4>
-                    <p class="card-text">An email is sent to customer when a shipment is done.</p>
-                </div>
-				<div class="col-sm-6 border-left mb-3 awhContainer">
-					<img src="/images/flow.png" alt="Flow" />
-                	<h4>Send an email when shipment</h4>
-                    <p class="card-text">An email is sent to customer when a shipment is done.</p>
-                </div>
-				<div class="col-sm-6 border-left mb-3 awhContainer">
-					<img src="/images/flow.png" alt="Flow" />
-                	<h4>Send an email when shipment</h4>
-                    <p class="card-text">An email is sent to customer when a shipment is done.</p>
-                </div>
+			<div class="col-sm-6 border-left mb-3 awhContainer">
+				<img src="/images/flow-smll.png" alt="Flow" />
+				<h4>Send an email when shipment</h4>
+				<p class="card-text">An email is sent to customer when a shipment is done.</p>
 			</div>
+			<div class="col-sm-6 border-left mb-3 awhContainer">
+				<img src="/images/flow-smll.png" alt="Flow" />
+				<h4>Send an email when shipment</h4>
+				<p class="card-text">An email is sent to customer when a shipment is done.</p>
+			</div>
+			<div class="col-sm-6 border-left mb-3 awhContainer">
+				<img src="/images/flow-smll.png" alt="Flow" />
+				<h4>Send an email when shipment</h4>
+				<p class="card-text">An email is sent to customer when a shipment is done.</p>
+			</div>
+			<div class="col-sm-6 border-left mb-3 awhContainer">
+				<img src="/images/flow-smll.png" alt="Flow" />
+				<h4>Send an email when shipment</h4>
+				<p class="card-text">An email is sent to customer when a shipment is done.</p>
+			</div>
+			<div class="col-sm-6 border-left mb-3 awhContainer">
+				<img src="/images/flow-smll.png" alt="Flow" />
+				<h4>Send an email when shipment</h4>
+				<p class="card-text">An email is sent to customer when a shipment is done.</p>
+			</div>
+			<div class="col-sm-6 border-left mb-3 awhContainer">
+				<img src="/images/flow-smll.png" alt="Flow" />
+				<h4>Send an email when shipment</h4>
+				<p class="card-text">An email is sent to customer when a shipment is done.</p>
+			</div>
+			<div class="col-sm-6 border-left mb-3 awhContainer">
+				<img src="/images/flow-smll.png" alt="Flow" />
+				<h4>Send an email when shipment</h4>
+				<p class="card-text">An email is sent to customer when a shipment is done.</p>
+			</div>
+		</div>
 	</div>           
 </main>
